# projectone-audio-engine

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/effects/: EffectsChain.h
include/engine/: AudioBuffer.h  AudioEngine.h  AudioMetrics.h  TestToneGenerator.h  WavWriter.h
include/persistence/: ProjectSerializer.h
include/sequencer/: Sequencer.h
include/synth/: Oscillator.h  SynthVoice.h
src/: main.cpp
src/effects/: EffectsChain.cpp
src/engine/: AudioBuffer.cpp  AudioEngine.cpp  AudioMetrics.cpp  TestToneGenerator.cpp  WavWriter.cpp
src/persistence/: ProjectSerializer.cpp
src/sequencer/: Sequencer.cpp
src/synth/: SynthVoice.cpp
